--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -37,16 +37,16 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>FacebookAdvertiserIDCollectionEnabled</key>
+	<true/>
 	<key>FacebookAppID</key>
 	<string>2317348558566656</string>
+	<key>FacebookAutoLogAppEventsEnabled</key>
+	<true/>
+	<key>FacebookClientToken</key>
+	<string>82e14fedf81ba3129bb62556b5bac461</string>
 	<key>FacebookDisplayName</key>
 	<string>Wine Street</string>
-	<!-- Added for Facebook Auth or SDK ??-->
-    <key>FacebookAutoLogAppEventsEnabled</key>
-    <true/>
-    <key>FacebookAdvertiserIDCollectionEnabled</key>
-    <true/>
-	<!--  -->
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
@@ -56,28 +56,26 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Wine Street requires permission for your Apple Music Library</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Wine Street requires permission for your calendar</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Wine Street requires permission for your camera in order to be able to scan codes</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Wine Street requires permission for your contacts</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Wine Street requires permission for your location in order to find every place around you</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Wine Street requires permission for your location in order to find every place around you</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Wine Street requires permission for your microphone</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Wine Street requires permission for your gallery in order to be able to pick images</string>
-	<!-- Added in order to solve rejection on App Store Connect(none are in use) -->
-	<key>NSContactsUsageDescription</key>
-	<string>Wine Street requires permission for your contacts</string>
-	<key>NSCalendarsUsageDescription</key>
-	<string>Wine Street requires permission for your calendar</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>Wine Street requires permission for your Apple Music Library</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Wine Street requires permission for your phone's motion</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Wine Street requires permission for your gallery in order to be able to pick images</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Wine Street requires permission for speech recognition</string>
-	<!-- -->
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
